--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -22,6 +22,7 @@
   "rules": {
     "react/react-in-jsx-scope": "off",
     "no-param-reassign": 0,
+    "no-nested-ternary": "off",
     "react/function-component-definition": [
       2,
       {
